fix: shift bottom-right circle further left

--- a/src/styles/pages/ButterflyLetters.css
+++ b/src/styles/pages/ButterflyLetters.css
@@ -526,7 +526,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-right: 90px;
+  padding-right: 140px;
   overflow: visible;
 }
 
